// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`With Jest snapshot, Condition component renders default state 1`] = `
<div
  className="root"
>
  <div
    className="filter"
  >
    <span>
      radius:
    </span>
    <div
      className="root"
    >
      <input
        defaultValue={500}
        onBlur={[Function]}
        type="text"
      />
    </div>
    <span>
      meters
    </span>
  </div>
  <div
    className="filter"
  >
    <span>
      price:
    </span>
    <div
      className="root"
    >
      <input
        onChange={[Function]}
        type="checkbox"
        value={1}
      />
      <label>
        $
      </label>
    </div>
    <div
      className="root"
    >
      <input
        onChange={[Function]}
        type="checkbox"
        value={2}
      />
      <label>
        $$
      </label>
    </div>
    <div
      className="root"
    >
      <input
        onChange={[Function]}
        type="checkbox"
        value={3}
      />
      <label>
        $$$
      </label>
    </div>
    <div
      className="root"
    >
      <input
        onChange={[Function]}
        type="checkbox"
        value={4}
      />
      <label>
        $$$$
      </label>
    </div>
  </div>
</div>
`;

exports[`With Jest snapshot, Condition component renders with condition values 1`] = `
<div
  className="root"
>
  <div
    className="filter"
  >
    <span>
      radius:
    </span>
    <div
      className="root"
    >
      <input
        defaultValue={1000}
        onBlur={[Function]}
        type="text"
      />
    </div>
    <span>
      meters
    </span>
  </div>
  <div
    className="filter"
  >
    <span>
      price:
    </span>
    <div
      className="root"
    >
      <input
        onChange={[Function]}
        type="checkbox"
        value={1}
      />
      <label>
        $
      </label>
    </div>
    <div
      className="root"
    >
      <input
        onChange={[Function]}
        type="checkbox"
        value={2}
      />
      <label>
        $$
      </label>
    </div>
    <div
      className="root"
    >
      <input
        onChange={[Function]}
        type="checkbox"
        value={3}
      />
      <label>
        $$$
      </label>
    </div>
    <div
      className="root"
    >
      <input
        onChange={[Function]}
        type="checkbox"
        value={4}
      />
      <label>
        $$$$
      </label>
    </div>
  </div>
</div>
`;
